Say which groups the LoRa radio needs, and that usermod is the way
Four of them, and only two are about this radio. The kernel wants spi for
/dev/spidev0.0 and gpio for /dev/gpiochip0; dialout and i2c are Pi4J's, which
registers its providers as one batch and refuses the batch unless the user is
in every group any of them might want. i2c was found the hard way, after Pi4J's
own message named only gpio and dialout.

And SupplementaryGroups= does not work for these, which is the trap worth
writing down: Pi4J reads the group database looking for the user's name rather
than asking what groups the process is running with, so the unit file satisfies
the kernel and not Pi4J. It stays for bluetooth, which does check the process.

The failure reads as a classpath problem and is not one, so the message is
quoted next to what actually causes it.

Also the JVM flag. Reaching the kernel through the Foreign Function and Memory
API prints four warnings a start without --enable-native-access, and a future
JDK will refuse the call rather than warn about it.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>